--- a/style/style.css
+++ b/style/style.css
@@ -1615,7 +1615,8 @@ footer .container .card .folow i {
         font-size: 30px;
     }
     .man1{
-        width: 185px
+        width: 185px;
+        bottom:60px
     }
     header .container .main .sec2 .card p {
         font-size: 10px;
